static/css/webrtc.css
#rtcbox {
  display: none;
  flex: 0 1 auto;
  flex-direction: column;
  justify-content: start;
  padding: 0;
  order: -1; /* on left side */
  box-sizing: border-box;
  background-color: transparent;
  height: auto;
  overflow: auto;
}

#rtcbox .video-container {
  flex: 0 0 auto;
  align-items: center;
  background-color: black;
  border: 1px solid black;
  border-left: 5px solid;
  box-sizing: content-box;
  display: flex;
  height: auto;
  justify-content: center;
  min-height: 80px;
  overflow: hidden;
  position: relative;
  resize: horizontal;
}
#rtcbox .video-container:not(:first-child) {
  margin-top: 5px;
}
#rtcbox video {
  box-sizing: content-box;
  background-color: black;
  height: 100%;
  object-fit: contain;
  width: 100%;
}
#rtcbox .video-container, #rtcbox video {
  transition: max-width .3s, max-height .3s, width .3s, height .3s;
}

.interface-container {
  display: flex;
  position: absolute;
  z-index: 2;
  bottom: 8px;
  left: 8px;
}
.interface-btn {
  background-color: rgba(255, 255, 255, 0.35);
  border-radius: 50%;
  padding: 5px;
  margin-right: 6px;
  cursor: pointer;
  transition: opacity .2s, background-color .2s;
  color: rgba(51, 51, 51, 1);
  width: 28px;
  height: 28px;
}
.interface-btn:hover:not(.disallowed) {
  opacity: 1;
  background-color: white !important;
}
.interface-btn.audio-btn:before { content: '\e83d'; }
.interface-btn.audio-btn.muted:before { content: '\e83e'; }
.interface-btn.audio-btn.disallowed:before { color: rgba(51, 51, 51, .5); }

.interface-btn.video-btn:before { content: '\e83b'; }
.interface-btn.video-btn.off:before { content: '\e83c'; }
.interface-btn.video-btn.disallowed:before { color: rgba(51, 51, 51, .5); }

.interface-btn.enlarge-btn:before { content: '\e840'; }
.interface-btn.enlarge-btn.large:before { content: '\e83f'; }

#rtcbox .video-container .user-name {
  transition: opacity .2s, background-color .2s;
  position: absolute;
  top: 0;
  left: 5px; /* border-width */
  right: 0;
  opacity: 0;
  background-color: rgba(255, 255, 255, 0.35);
  font-weight: bold;
  line-height: 20px;
  padding-left: 8px;
  color: #111;
  z-index: 5;
  height: 20px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  background-color:
}
#rtcbox .video-container.local-user {
  order: -1; /* first position */
}
#rtcbox .video-container:hover .interface-btn,
#rtcbox .video-container:hover .user-name,
#rtcbox .video-container.local-user .interface-btn {
  background-color: rgba(255, 255, 255, 0.65);
  opacity: 1;
}
#rtcbox .video-container:hover .user-name {
  opacity: 1;
}

@media (max-width: 800px) {
  #editorcontainerbox {
    flex-direction: column;
  }
  #rtcbox {
    flex-direction: row;
    order: 2;
    align-items: baseline;
  }
  #rtcbox .video-container:not(:first-child) {
    margin-top: 0;
    margin-left: 5px;
  }
}

